--- a/app/src/main/res/layout/fragment_my_cart.xml
+++ b/app/src/main/res/layout/fragment_my_cart.xml
@@ -8,13 +8,16 @@
     android:orientation="vertical"
     android:padding="10dp">
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="20dp"
-        tools:layout_editor_absoluteY="20dp"
-        android:layout_marginBottom="50dp">
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="50dp"
+        app:layout_constraintBottom_toTopOf="@id/proceedtopay"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -24,14 +27,13 @@
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="20dp"
-                app:cardBackgroundColor="@color/teal_200">
+                android:layout_height="wrap_content">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:padding="6dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -41,17 +43,22 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:drawableStart="@drawable/location"
+                            android:drawablePadding="2dp"
+                            android:gravity="bottom"
+                            android:paddingStart="6dp"
                             android:text="Bill To: "
+                            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
                             android:textColor="@color/black"
-                            android:textSize="24dp"
                             android:textStyle="bold" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:paddingStart="6dp"
                             android:text="Himanshu"
+                            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
                             android:textColor="@color/black"
-                            android:textSize="24sp"
                             android:textStyle="bold" />
 
                         <TextView
@@ -59,7 +66,8 @@
                             android:layout_height="wrap_content"
                             android:text="Change"
                             android:textAlignment="textEnd"
-                            android:textSize="24sp"
+                            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2"
+                            android:textColor="@color/teal_200"
                             android:textStyle="bold" />
 
 
@@ -70,17 +78,20 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:maxWidth="300dp"
+                        android:paddingStart="6dp"
                         android:text="484/2 - Chaudhary wada 4 skandrabad"
-                        android:textSize="20dp" />
+                        android:textAppearance="@android:style/TextAppearance.Medium" />
 
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@color/teal_200"
+                        android:fontFamily="@font/work_sans_semibold"
+                        android:paddingStart="6dp"
                         android:text="Deliver By :"
-                        android:textColor="@color/black"
-                        android:textSize="20dp"
-                        android:textStyle="bold" />
+                        android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                        android:textColor="@android:color/black" />
 
 
                 </LinearLayout>
@@ -88,82 +99,115 @@
 
             </androidx.cardview.widget.CardView>
 
-            <androidx.recyclerview.widget.RecyclerView
+            <!--            <androidx.cardview.widget.CardView-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="wrap_content"-->
+
+            <!--                app:cardCornerRadius="5dp"-->
+            <!--                app:cardElevation="2dp"-->
+            <!--                app:cardUseCompatPadding="true"-->
+            <!--                app:contentPadding="10sp">-->
+
+            <!--                <LinearLayout-->
+            <!--                    android:layout_width="match_parent"-->
+            <!--                    android:layout_height="wrap_content"-->
+            <!--                    android:orientation="vertical">-->
+
+
+            <!--                    <LinearLayout-->
+            <!--                        android:layout_width="match_parent"-->
+            <!--                        android:layout_height="wrap_content"-->
+            <!--                        android:orientation="horizontal">-->
+
+            <!--                        <TextView-->
+            <!--                            android:layout_width="match_parent"-->
+            <!--                            android:layout_height="wrap_content"-->
+
+            <!--                            android:text="Nivea Body Lotion,600ml"-->
+            <!--                            android:textColor="@color/black"-->
+            <!--                            android:textSize="18sp"-->
+            <!--                            android:textStyle="bold" />-->
+
+
+            <!--                    </LinearLayout>-->
+
+            <!--                    <TextView-->
+            <!--                        android:layout_width="wrap_content"-->
+            <!--                        android:layout_height="wrap_content"-->
+            <!--                        android:text="MRP-Rs.1500"-->
+            <!--                        android:textSize="16dp"-->
+
+            <!--                        />-->
+
+            <!--                    <LinearLayout-->
+            <!--                        android:layout_width="match_parent"-->
+            <!--                        android:layout_height="wrap_content"-->
+            <!--                        android:layout_gravity="center_vertical|center_horizontal"-->
+            <!--                        android:orientation="horizontal">-->
+
+            <!--                        <TextView-->
+            <!--                            android:layout_width="wrap_content"-->
+            <!--                            android:layout_height="wrap_content"-->
+            <!--                            android:layout_marginTop="12dp"-->
+            <!--                            android:text="Rs.999"-->
+            <!--                            android:textColor="@color/black"-->
+            <!--                            android:textSize="24dp"-->
+
+
+            <!--                            />-->
+
+            <!--                        &lt;!&ndash;                    <ImageButton&ndash;&gt;-->
+            <!--                        &lt;!&ndash;                        android:layout_width="50dp"&ndash;&gt;-->
+            <!--                        &lt;!&ndash;                        android:layout_height="50sp"&ndash;&gt;-->
+            <!--                        &lt;!&ndash;                        android:background="@color/black"&ndash;&gt;-->
+            <!--                        &lt;!&ndash;                        android:layout_marginLeft="250dp"&ndash;&gt;-->
+
+            <!--                        &lt;!&ndash;                         />&ndash;&gt;-->
+            <!--                    </LinearLayout>-->
+
+
+            <!--                </LinearLayout>-->
+
+
+            <!--            </androidx.cardview.widget.CardView>-->
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/mycartrecycleview"/>
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
 
-<!--            <androidx.cardview.widget.CardView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
+                <TextView
+                    android:id="@+id/textView8"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/ibm_bold"
+                    android:padding="10dp"
+                    android:text="Item(s) in Cart"
+                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />
 
-<!--                app:cardCornerRadius="5dp"-->
-<!--                app:cardElevation="2dp"-->
-<!--                app:cardUseCompatPadding="true"-->
-<!--                app:contentPadding="10sp">-->
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/addtocartsearchbtn2"
+                    style="@style/Widget.Material3.Button.ElevatedButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="Coupons"
+                    android:textAppearance="@android:style/TextAppearance.Material.Body2"
+                    android:textColor="@android:color/black"
+                    app:backgroundTint="@color/teal_200"
+                    app:icon="@drawable/ic_round_arrow_forward_ios_24"
+                    app:iconGravity="end"
+                    app:iconTint="@android:color/black" />
+            </LinearLayout>
 
-<!--                <LinearLayout-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:orientation="vertical">-->
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/mycartrecycleview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-
-<!--                    <LinearLayout-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:orientation="horizontal">-->
-
-<!--                        <TextView-->
-<!--                            android:layout_width="match_parent"-->
-<!--                            android:layout_height="wrap_content"-->
-
-<!--                            android:text="Nivea Body Lotion,600ml"-->
-<!--                            android:textColor="@color/black"-->
-<!--                            android:textSize="18sp"-->
-<!--                            android:textStyle="bold" />-->
-
-
-<!--                    </LinearLayout>-->
-
-<!--                    <TextView-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:text="MRP-Rs.1500"-->
-<!--                        android:textSize="16dp"-->
-
-<!--                        />-->
-
-<!--                    <LinearLayout-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:layout_gravity="center_vertical|center_horizontal"-->
-<!--                        android:orientation="horizontal">-->
-
-<!--                        <TextView-->
-<!--                            android:layout_width="wrap_content"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:layout_marginTop="12dp"-->
-<!--                            android:text="Rs.999"-->
-<!--                            android:textColor="@color/black"-->
-<!--                            android:textSize="24dp"-->
-
-
-<!--                            />-->
-
-<!--                        &lt;!&ndash;                    <ImageButton&ndash;&gt;-->
-<!--                        &lt;!&ndash;                        android:layout_width="50dp"&ndash;&gt;-->
-<!--                        &lt;!&ndash;                        android:layout_height="50sp"&ndash;&gt;-->
-<!--                        &lt;!&ndash;                        android:background="@color/black"&ndash;&gt;-->
-<!--                        &lt;!&ndash;                        android:layout_marginLeft="250dp"&ndash;&gt;-->
-
-<!--                        &lt;!&ndash;                         />&ndash;&gt;-->
-<!--                    </LinearLayout>-->
-
-
-<!--                </LinearLayout>-->
-
-
-<!--            </androidx.cardview.widget.CardView>-->
+            </androidx.recyclerview.widget.RecyclerView>
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -325,20 +369,18 @@
             </androidx.cardview.widget.CardView>
 
         </LinearLayout>
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/proceedtopay"
-        android:layout_width="match_parent"
+        style="@style/TextAppearance.MdcTypographyStyles.Button"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="bottom"
         android:layout_marginHorizontal="20dp"
-        android:fitsSystemWindows="false"
         android:text="Procced to pay"
-        android:textSize="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
+        app:layout_constraintStart_toStartOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
