--- a/app/src/main/res/layout/fragment_homepage.xml
+++ b/app/src/main/res/layout/fragment_homepage.xml
@@ -259,7 +259,7 @@
                                     android:layout_width="113dp"
                                     android:layout_height="120dp"
                                     android:layout_margin="5sp"
-                                    android:backgroundTint="@color/teal_200"
+                                    android:foreground="@drawable/himalaya_mentat_syrup_200ml"
                                     app:cardCornerRadius="15dp"
                                     app:cardElevation="8sp" />
 
@@ -283,6 +283,7 @@
                                     android:layout_height="120dp"
                                     android:layout_margin="5sp"
                                     android:backgroundTint="@color/teal_200"
+                                    android:foreground="@drawable/himalaya_bresol"
                                     app:cardCornerRadius="15dp"
                                     app:cardElevation="8sp" />
 
