--- a/app/src/main/res/layout/medicine_card.xml
+++ b/app/src/main/res/layout/medicine_card.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10sp"
@@ -13,11 +14,11 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="wrap_content"
+            android:layout_width="67dp"
             android:layout_height="match_parent"
             android:layout_gravity="start|top"
             android:scaleType="fitStart"
-            android:src="@drawable/demoimg3" />
+            android:src="@drawable/loadingm" />
 
         <LinearLayout
             android:layout_width="match_parent"
