--- a/app/src/main/res/layout/medicine_card.xml
+++ b/app/src/main/res/layout/medicine_card.xml
@@ -18,7 +18,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="start|top"
             android:scaleType="fitStart"
-            android:src="@drawable/loadingm" />
+            android:src="@drawable/loading" />
 
         <LinearLayout
             android:layout_width="match_parent"
