--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,8 +30,8 @@
         android:gravity="bottom"
         app:fabCradleMargin="3dp"
         app:fabCradleRoundedCornerRadius="8dp"
-        app:fabCradleVerticalOffset="0dp"
-        app:hideOnScroll="true" />
+        app:fabCradleVerticalOffset="0dp"/>
+<!--        app:hideOnScroll="true"-->
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
@@ -41,8 +41,9 @@
         android:background="@color/transparent"
         app:elevation="0dp"
         app:labelVisibilityMode="labeled"
-        app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
         app:menu="@menu/bottom_nav_menu" />
+<!--    app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"-->
+
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_upload"
