--- a/app/src/main/res/layout/fragment_homepage.xml
+++ b/app/src/main/res/layout/fragment_homepage.xml
@@ -19,23 +19,23 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <SearchView
-                android:id="@+id/searchView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+<!--            <SearchView-->
+<!--                android:id="@+id/searchView"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
 
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="100dp"
-                android:layout_marginEnd="16dp"
-                android:background="@drawable/searchview"
-                android:elevation="6dp"
-                android:iconifiedByDefault="false"
-                android:padding="0dp"
-                android:queryBackground="@android:color/transparent"
-                android:queryHint="Search"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+<!--                android:layout_marginStart="16dp"-->
+<!--                android:layout_marginTop="100dp"-->
+<!--                android:layout_marginEnd="16dp"-->
+<!--                android:background="@drawable/searchview"-->
+<!--                android:elevation="6dp"-->
+<!--                android:iconifiedByDefault="false"-->
+<!--                android:padding="0dp"-->
+<!--                android:queryBackground="@android:color/transparent"-->
+<!--                android:queryHint="Search"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintTop_toTopOf="parent" />-->
 
             <ImageButton
                 android:id="@+id/cartimagebutton"
@@ -67,11 +67,12 @@
                 android:id="@+id/view"
                 android:layout_width="0dp"
                 android:layout_height="109dp"
-                android:layout_marginTop="190dp"
+                android:layout_marginTop="52dp"
                 android:background="@color/teal_200"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
             <Button
                 android:id="@+id/homeupload"
