--- a/app/src/main/res/layout/layout_screen.xml
+++ b/app/src/main/res/layout/layout_screen.xml
@@ -13,17 +13,19 @@
         android:layout_width="359dp"
         android:layout_height="376dp"
         android:layout_marginTop="24dp"
+        android:contentDescription="@string/introimg"
+        android:padding="20dp"
         android:src="@drawable/onboardscreen1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="@string/introimg" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_description"
-        android:layout_width="356dp"
-        android:layout_height="79dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:fontFamily="@font/ibm_regular"
+        android:padding="10dp"
         android:text="@string/desc_one"
         android:textAlignment="center"
         android:textColor="@color/black"
@@ -34,8 +36,8 @@
 
     <TextView
         android:id="@+id/tv_title"
-        android:layout_width="355dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:fontFamily="@font/ibm_bold"
         android:text="@string/heading_one"
         android:textAlignment="center"
