--- a/app/src/main/res/layout/fragment_my_cart.xml
+++ b/app/src/main/res/layout/fragment_my_cart.xml
@@ -266,6 +266,7 @@
                             />
 
                         <TextView
+                            android:id="@+id/cartTotal"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Rs.2000"
@@ -292,11 +293,11 @@
                             />
 
                         <TextView
+                            android:id="@+id/discount"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="-Rs.200"
                             android:textAlignment="viewEnd"
-
                             android:textSize="20sp" />
 
 
@@ -355,6 +356,7 @@
                             />
 
                         <TextView
+                            android:id="@+id/topay"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Rs.2000"
