--- a/app/src/main/res/layout/mycart_card.xml
+++ b/app/src/main/res/layout/mycart_card.xml
@@ -34,6 +34,7 @@
             </LinearLayout>
 
             <TextView
+                android:id="@+id/mrp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="MRP-Rs.1500"
