--- a/app/src/main/res/layout/fragment_search_medicine.xml
+++ b/app/src/main/res/layout/fragment_search_medicine.xml
@@ -2,11 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".search_medicine">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
@@ -15,7 +14,7 @@
         android:background="@android:color/white"
         android:overScrollMode="never"
         app:elevation="0dp"
-        app:liftOnScroll="false">
+        app:liftOnScroll="true">
 
         <androidx.appcompat.widget.SearchView
             android:id="@+id/search_view"
@@ -33,46 +32,6 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        android:padding="20dp"
-        tools:context=".search_medicine">
-
-        <!--    <SearchView-->
-        <!--        android:id="@+id/searchView2"-->
-        <!--        android:layout_width="match_parent"-->
-        <!--        android:layout_height="wrap_content"-->
-
-        <!--        android:layout_margin="5dp"-->
-        <!--        android:background="@drawable/searchview"-->
-        <!--        android:elevation="6dp"-->
-        <!--        android:gravity="start"-->
-        <!--        android:iconifiedByDefault="false"-->
-        <!--        android:padding="5dp"-->
-        <!--        android:queryBackground="@android:color/transparent"-->
-        <!--        android:queryHint="Search" />-->
-        <!--=======-->
-        <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
-        <!--    tools:context=".search_medicine"-->
-        <!--    android:padding="20dp">-->
-        <!--    <SearchView-->
-        <!--        android:id="@+id/searchView"-->
-        <!--        android:layout_width="match_parent"-->
-        <!--        android:layout_height="57dp"-->
-        <!--        android:layout_alignParentStart="true"-->
-        <!--        android:layout_alignParentTop="true"-->
-        <!--        android:layout_centerHorizontal="true"-->
-        <!--        android:layout_marginStart="4dp"-->
-
-        <!--        android:background="@drawable/searchview"-->
-        <!--        android:elevation="6dp"-->
-        <!--        android:iconifiedByDefault="false"-->
-        <!--        android:padding="5dp"-->
-        <!--        android:queryBackground="@android:color/transparent"-->
-        <!--        android:queryHint="Search here"-->
-        <!--        />-->
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/searchrecyleview"
@@ -80,8 +39,6 @@
             android:layout_height="match_parent"
             android:alwaysDrawnWithCache="true" />
 
-        <!--&gt;>>>>>> Stashed changes-->
-    </FrameLayout>
 
 
 </LinearLayout>
