--- a/app/src/main/res/layout/medicine_card.xml
+++ b/app/src/main/res/layout/medicine_card.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10sp"
-    app:cardElevation="6sp">
+    android:layout_margin="6dp"
+    app:cardElevation="2sp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -34,27 +34,80 @@
                 android:text="Name"
                 android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline6" />
 
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/price"
-                style="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
-                android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/Subtitile"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableStart="@drawable/ic_baseline_currency_rupee_24"
-                android:inputType="number"
-                android:text="class"
-                app:textAllCaps="false" />
+                android:fontFamily="@font/work_sans"
+                android:text="Text2"
+                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2" />
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/addtocartsearchbtn"
-                style="@style/Widget.Material3.Button.OutlinedButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:text="Add to cart"
-                android:textAppearance="@android:style/TextAppearance.Material.Small"
-                android:textColor="@color/teal_200"
-                android:visibility="visible"
-                app:strokeColor="@color/teal_200" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/linearLayout4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/price"
+                    style="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableStart="@drawable/ic_baseline_currency_rupee_24"
+                    android:inputType="number"
+                    android:text="class"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:textAllCaps="false" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/addtocartsearchbtn"
+                    style="?attr/materialButtonOutlinedStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Add to cart"
+                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                    android:textColor="@color/teal_200"
+                    android:visibility="visible"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:strokeColor="@color/teal_200" />
+
+                <LinearLayout
+                    android:id="@+id/quantitybtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:visibility="invisible"
+                    app:layout_constraintBottom_toBottomOf="@id/addtocartsearchbtn"
+                    app:layout_constraintEnd_toEndOf="@id/addtocartsearchbtn"
+                    app:layout_constraintStart_toStartOf="@id/addtocartsearchbtn"
+                    app:layout_constraintTop_toTopOf="@id/addtocartsearchbtn">
+
+
+                    <com.google.android.material.floatingactionbutton.FloatingActionButton
+                        android:id="@+id/minusbtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/minus_24"
+                        app:fabCustomSize="32dp" />
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/quantitynumber"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:ems="2"
+                        android:gravity="center"
+                        android:inputType="number"
+                        android:textAppearance="@style/TextAppearance.Material3.LabelMedium" />
+
+                    <com.google.android.material.floatingactionbutton.FloatingActionButton
+                        android:id="@+id/addbtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_baseline_add_24"
+                        app:fabCustomSize="32dp" />
+                </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
 
         </LinearLayout>
