--- a/app/src/main/res/layout/fragment_account_page.xml
+++ b/app/src/main/res/layout/fragment_account_page.xml
@@ -12,8 +12,6 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
-        android:layout_marginTop="50dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,27 +28,97 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <LinearLayout
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:padding="10dp">
+                    android:background="@color/teal_600"
+                    android:padding="10dp"
+                    android:id="@+id/linearLayout7">
 
-                    <ImageView
+                    <com.google.android.material.imageview.ShapeableImageView
+                        android:id="@+id/shapeableImageView2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:srcCompat="@drawable/apni_care_logo" />
+                        android:padding="10dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:srcCompat="@drawable/avatar"
+                        tools:layout_conversion_absoluteHeight="102dp"
+                        tools:layout_conversion_absoluteWidth="102dp" />
 
-                    <TextView
-                        android:id="@+id/text_dashboard"
-                        android:layout_width="match_parent"
+                    <LinearLayout
+                        android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:gravity="bottom|end"
-                        android:text="Himanshu Verma"
-                        android:textAppearance="?attr/textAppearanceHeadline5"
-                        android:textFontWeight="2000" />
+                        android:gravity="bottom"
+                        android:orientation="vertical"
+                        app:layout_constraintBottom_toBottomOf="@+id/shapeableImageView2"
+                        app:layout_constraintStart_toEndOf="@+id/shapeableImageView2"
+                        app:layout_constraintTop_toTopOf="@+id/shapeableImageView2"
+                        tools:layout_conversion_absoluteHeight="108dp"
+                        tools:layout_conversion_absoluteWidth="141dp">
 
-                </LinearLayout>
+                        <TextView
+                            android:id="@+id/text_dashboard"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="top"
+                            android:gravity="center"
+                            android:text="User Name"
+                            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
+                            android:textFontWeight="1"
+                            android:visibility="gone" />
+
+                        <TextView
+                            android:id="@+id/text_email"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:text="User Email"
+                            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
+                            android:textFontWeight="1"
+                            android:visibility="gone" />
+
+                        <TextView
+                            android:id="@+id/text_gender"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:text="gender"
+                            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Overline"
+                            android:textFontWeight="1"
+                            android:visibility="gone" />
+
+                        <View
+                            android:id="@+id/divider6"
+                            android:layout_width="match_parent"
+                            android:layout_height="6dp" />
+
+                        <TextView
+                            android:id="@+id/phoneNumber"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="bottom"
+                            android:gravity="center"
+                            android:text="Mobile Number"
+                            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Button"
+                            android:textFontWeight="1" />
+
+                    </LinearLayout>
+
+                    <androidx.appcompat.widget.AppCompatImageButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@android:color/transparent"
+                        android:src="@drawable/edit"
+                        android:tint="@color/cyan_50"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:src="@drawable/edit" />
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
 
                 <View
@@ -61,16 +129,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/ibm_semibold"
 
-                    android:gravity="end"
-                    android:padding="10dp"
-                    android:text="Male"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                    android:textColor="@android:color/black" />
 
                 <View
                     android:id="@+id/divider3"
@@ -79,37 +138,6 @@
                     android:background="?android:attr/listDivider"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10sp"
-                    android:padding="10dp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentTop="true"
-                        android:layout_marginStart="10sp"
-                        android:fontFamily="@font/ibm_bold"
-                        android:text="edit"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                        android:textColor="@android:color/black"
-                        app:drawableStartCompat="@drawable/ic_round_edit_24" />
-
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentTop="true"
-                        android:layout_alignParentEnd="true"
-                        android:layout_marginEnd="10dp"
-                        android:fontFamily="@font/work_sans_semibold"
-                        android:text="9084000392"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                        android:textColor="@android:color/black" />
-                </RelativeLayout>
 
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
@@ -129,8 +157,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -163,7 +191,7 @@
             android:textStyle="bold"
             app:drawableLeftCompat="@drawable/ic_baseline_library_books_24" />
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/account_addressbook"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
