--- a/app/src/main/res/layout/fragment_edit_address.xml
+++ b/app/src/main/res/layout/fragment_edit_address.xml
@@ -95,26 +95,6 @@
 
                     <com.google.android.material.textfield.TextInputLayout
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:hint="Pin Code"
-                        app:boxStrokeColor="@color/teal_200"
-                        app:hintTextColor="@color/teal_200">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/pincode"
-                            android:maxLength="8"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/roboto_regular"
-                            android:inputType="number"
-                            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2" />
-
-                    </com.google.android.material.textfield.TextInputLayout>
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
 
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -147,7 +127,27 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/roboto_regular"
-                            android:inputType="textPostalAddress"
+                            android:inputType="textMultiLine|textPostalAddress"
+                            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2" />
+
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:hint="Pin Code"
+                        app:boxStrokeColor="@color/teal_200"
+                        app:hintTextColor="@color/teal_200">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/pincode"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/roboto_regular"
+                            android:inputType="number"
+                            android:maxLength="6"
                             android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2" />
 
                     </com.google.android.material.textfield.TextInputLayout>
@@ -243,7 +243,7 @@
         android:text="Save"
         android:textColor="@android:color/black"
         android:textSize="20sp"
-        app:backgroundTint="@color/teal_A400"
+        app:backgroundTint="@color/teal_200"
         app:cornerRadius="20dp" />
 
 
