--- a/app/src/main/res/layout/fragment_popular_categories.xml
+++ b/app/src/main/res/layout/fragment_popular_categories.xml
@@ -12,33 +12,36 @@
         android:gravity="center"
         android:orientation="vertical">
 
-        <androidx.cardview.widget.CardView
+        <com.google.android.material.card.MaterialCardView
+            style="@style/Widget.MaterialComponents.CardView"
+            app:strokeColor="@color/material_on_surface_stroke"
+            app:strokeWidth="1dp"
             android:id="@+id/cardview_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:clickable="true"
-            android:foreground="?android:attr/selectableItemBackground"
             app:cardCornerRadius="10dp"
-            app:cardElevation="4dp">
+            app:cardElevation="0dp">
 
-            <ImageView
+            <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/cate_img_id2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:scaleType="fitCenter" />
+                android:scaleType="fitStart" />
 
-        </androidx.cardview.widget.CardView>
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/cate_title_id2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_margin="5dp"
+                android:gravity="center|top"
+                android:text="Book Title"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                android:textColor="@android:color/black" />
 
-        <TextView
-            android:id="@+id/cate_title_id2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:gravity="center"
-            android:text="Book Title"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            android:textColor="@android:color/black" />
+        </com.google.android.material.card.MaterialCardView>
 
 
     </LinearLayout>
