resend api updated

--- a/app/src/main/res/layout/activity_enter_otp.xml
+++ b/app/src/main/res/layout/activity_enter_otp.xml
@@ -185,7 +185,7 @@
 
 
     <Button
-        android:id="@+id/resend_otp_button"
+        android:id="@+id/submit_otp_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
